--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -1,11 +1,12 @@
 #container {
   text-align: center;
 
-  position: absolute;
+  //position: absolute;
   left: 0;
   right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  //top: 45%;
+  top: 0;
+  //transform: translateY(-50%);
 }
 
 #container strong {
@@ -28,12 +29,12 @@
 
 // custom
 #board-container {
-  //position: absolute;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  flex-wrap: wrap;
   flex-grow: 1;
   overflow: hidden;
+  padding-top: 10px;
 }
 
 #board {
@@ -74,10 +75,16 @@
 }
 
 #keyboard-container {
+  position: absolute;
+  text-align: center;
+
   height: 200px;
   margin-left: 10px;
   margin-right: 5px;
-  padding-top: 100px;
+
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .keyboard-row {
@@ -139,12 +146,11 @@
 }
 
 .process {
+  width: 100%;
   color: rgb(58, 58, 60);
   font-size: 1rem;
   font-weight: bold;
   margin: 0.4rem 0 0.4rem 0;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .customPaddingLeft {
