--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -156,3 +156,12 @@
 .customPaddingLeft {
   padding-left: 10px;
 }
+
+.grammaticalClass {
+  color: rgb(58, 58, 60);
+}
+
+.meaning {
+  font-weight: bold;
+  color: rgb(58, 58, 60);
+}
