--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-title size="large">
+      <ion-title size="large" class="pageTitle">
         Word Game
       </ion-title>
     </ion-buttons>
