--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -26,13 +26,16 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 ion-content{
-  --ion-background-color:#D7C6AB;
+  //--ion-background-color:#D7C6AB;
+  --ion-background-color: #111D12;
 }
 
 ion-header{
-  --ion-background-color:#D7C6AB;
+  //--ion-background-color: #111D12;
+  //--ion-background-color:#D7C6AB;
 }
 
 ion-footer{
-  --ion-background-color:#D7C6AB;
+  //--ion-background-color: #111D12; 
+  //--ion-background-color:#D7C6AB;
 }
