--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -27,7 +27,7 @@
 
 ion-content{
   //--ion-background-color:#D7C6AB;
-  --ion-background-color: #111D12;
+  //--ion-background-color: #111D12;
 }
 
 ion-header{
