--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -28,25 +28,27 @@
 
     <!-- <div *ngIf="alreadyStarted" id="board-container"> -->
     <div id="board-container">
-      <span class="process" *ngIf="alreadyStarted">tentativa {{actual}} de {{limitTry}}</span>
-      <div id="board">
+      <span class="process" *ngIf="alreadyStarted">&nbsp;&nbsp;tentativa {{actual}} de {{limitTry}}</span>
+      <ion-item-divider class="customDivider"></ion-item-divider>
+
+      <div id="board_try1" class="hide">
         <P>1</P>
-        <div *ngFor="let div of wordSquares" class="square " id="{{div.id}}_try1">
+        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try1">
         </div>
       </div>
-      <div id="board">
+      <div id="board_try2" class="hide">
         <P>2</P>
-        <div *ngFor="let div of wordSquares" class="square " id="{{div.id}}_try2">
+        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try2">
         </div>
       </div>
-      <div id="board">
+      <div id="board_try3" class="hide">
         <P>3</P>
-        <div *ngFor="let div of wordSquares" class="square " id="{{div.id}}_try3">
+        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try3">
         </div>
       </div>
-      <div id="board">
+      <div id="board_try4" class="hide">
         <P>4</P>
-        <div *ngFor="let div of wordSquares" class="square " id="{{div.id}}_try4">
+        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try4">
         </div>
       </div>
       <div id="board">
@@ -57,8 +59,8 @@
     </div>
 
     <ion-label style="text-align: center;">
-      <!-- <h2 id="errorMessage" class="error-message hide"> {{ errorMessage }}</h2> -->
-      <h2 id="errorMessage" class="error-message"> {{ errorMessage }}</h2>
+      <span id="errorMessage" class="error-message hide">{{ errorMessage }}</span>
+      <ion-item-divider id="errorMessageHr" class="customDivider hide"></ion-item-divider>
     </ion-label>
 
     <ion-label id="meaning" style="text-align: center;">
