--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -33,22 +33,22 @@
 
       <div id="board_try1" class="hide">
         <P>1</P>
-        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try1">
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try1">
         </div>
       </div>
       <div id="board_try2" class="hide">
         <P>2</P>
-        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try2">
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try2">
         </div>
       </div>
       <div id="board_try3" class="hide">
         <P>3</P>
-        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try3">
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try3">
         </div>
       </div>
       <div id="board_try4" class="hide">
         <P>4</P>
-        <div *ngFor="let div of wordSquares" class="square" id="{{div.id}}_try4">
+        <div *ngFor="let div of wordSquares" class="square animate__animated" id="{{div.id}}_try4">
         </div>
       </div>
       <div id="board">
