pwa added + meaning layout

--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -176,12 +176,19 @@
 }
 
 .grammaticalClass {
-  color: var(--ion-color-sucess);
+  width: 100%;
+  color: var(  --ion-color-medium);
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 15px;
 }
 
 .meaning {
+  width: 100%;
+  color: var(  --ion-color-medium-tint);
+  font-size: 1.2rem;
   font-weight: bold;
-  color: var(--ion-color-sucess);
 }
 
 .pageTitle {
