fix at webscraping for get phrase

--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -203,3 +203,11 @@
     --width: 350px;
   }
 }
+
+.item-inner {
+  border-style: none !important;
+}
+
+.item-inner:host {
+  border-style: none !important;
+}
