--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -17,11 +17,11 @@
 
     <ion-item-group style="display:inline-block;margin-top:5px;" *ngIf="!alreadyStarted">
       <ion-item>
-        <ion-select class="ion-text-center" (ionChange)="typeSelected($event);" value="0" ok-text="Selecionar" cancel-text="Cancelar">
+        <!-- <ion-select class="ion-text-center" (ionChange)="typeSelected($event);" value="0" ok-text="Selecionar" cancel-text="Cancelar">
           <ion-select-option *ngFor="let t of arrayRandonSearch?.items" value="{{t.value}}">
             {{ t.text }}
           </ion-select-option>
-        </ion-select>
+        </ion-select> -->
         <ion-button *ngIf="!alreadyStarted" color="dark" (click)="start()" class="ion-text-center" style="margin-left: 20px;margin-top:5px;">Começar</ion-button>
       </ion-item>
     </ion-item-group>
