--- a/frontend/src/theme/variables.scss
+++ b/frontend/src/theme/variables.scss
@@ -237,4 +237,79 @@
 
     --ion-card-background: #1e1e1e;
   }
+
+}
+
+// handdle alerts
+.alertInfo {
+  --background: linear-gradient(to bottom right, lightgreen, lightblue);
+  --color: white !important;
+  font-weight: bold;
+}
+
+.alertInfo h2 {
+  text-align: center;
+}
+
+ion-list {
+  --background: transparent !important;
+}
+
+.alertInfo a {
+  text-decoration: none;
+}
+
+.alertInfo ion-item {
+  --background: transparent;
+  margin-left: -16px;
+}
+
+.alertInfo h3 {
+  text-align: center;
+}
+
+
+.alertLimitExceeded {
+  --backdrop-opacity: 0.2 !important;
+  //--background: linear-gradient(90deg, rgba(165, 255, 192, 1) 1%, rgba(0, 212, 255, 1) 100%) !important;
+  --background: linear-gradient(to bottom right, red, orange);
+}
+
+.alertLimitExceeded h2 {
+  text-align: center;
+}
+
+.alertLimitExceeded .alert-message {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.alertLimitExceeded .alert-button {
+  border: 1px solid !important;
+  border-radius: 6px !important;
+}
+
+.alertSuccess {
+  --backdrop-opacity: 0.2 !important;
+  //--background: linear-gradient(90deg, rgba(165, 255, 192, 1) 1%, rgba(0, 212, 255, 1) 100%) !important;
+  --background: linear-gradient(to bottom right, lightgreen, lightyellow);
+}
+
+.alertSuccess h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.alertSuccess .alert-message {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.alertSuccess .alert-button {
+  border: 1px solid !important;
+  border-radius: 6px !important;
 }
