intercept word typed

--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -23,7 +23,7 @@
 
     <div id="board-container">
       <span class="process" *ngIf="alreadyStarted">{{grammaticalClass}}</span>
-      <span class="meaning" style="text-align: center;margin: 0px 5px 5px 5px">{{meaning}}</span>
+      <!-- <span class="meaning" style="text-align: center;margin: 0px 5px 5px 5px">{{meaning}}</span> -->
       <!-- <ion-item-divider class="customDivider"></ion-item-divider> -->
 
       <div id="board_try1" class="hide">
